--- a/wwwroot/mv/index.html
+++ b/wwwroot/mv/index.html
@@ -37,7 +37,7 @@
     <script type="text/javascript" src="/js/anims.js?v=1658923290"></script>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg">
+    <nav id="mvPageNav" class="navbar navbar-expand-lg">
         <a class="navbar-brand" href="/">
             <div id='logo'>
                 <div id='cog'>&nbsp;</div>
