--- a/wwwroot/files/index.html
+++ b/wwwroot/files/index.html
@@ -130,6 +130,35 @@
             </div>
         </div>
     </div>
+    <div class="modal" id="helpModal" tabindex="-1" role="dialog" aria-labelledby="helpModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="helpModalLabel">Help</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body" id="helpModalContent">
+                    <!--<kbd>%</kbd> for wildcard<br>
+                    <kbd>^</kbd> string must start with<br>-->
+                    <kbd>type:type</kbd> for filtering by type (requires files to be analyzed to include unknown files)<br>
+                    <!--<kbd>chash:md5</kbd> for filter by contenthash<br>-->
+                    <kbd>unnamed</kbd> for files without filenames<br>
+                    <!--<kbd>communitynames</kbd> for files with community filenames<br>
+                    <kbd>encrypted</kbd> for encrypted files<br>
+                    <kbd>encrypted:KEY</kbd> for encrypted by key<br>
+                    <kbd>skit:soundkitid</kbd> for searching by SoundKitID<br>
+                    <kbd>range:start-end</kbd> search within a specific set of FileDataIDs<br>
+                    <kbd>vo:searchterm</kbd> show sound files in which this dialogue appears<br>-->
+                    <p>It is also possible to combine some of these options (but not others, it will complain) by separating them by a <kbd>,</kbd>. <br>Examples: <kbd>unnamed,type:wmo</kbd> <kbd>creature,type:m2</kbd></p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="modal" id="previewModal" tabindex="-1" role="dialog" aria-labelledby="previewModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
@@ -289,7 +318,7 @@
                 },
                 "pageLength": 25,
                 "language": {
-                    "search": "Search: _INPUT_ <!--<a style='margin-top: -5px;' class='btn btn-outline-primary btn-sm' href='#' data-toggle='modal' data-target='#helpModal'><i class='fa fa-question'></i></a> <a role='button' style='margin-top: -5px;' id='togglePreviewWindow' onClick='togglePreviewPane()' class='btn btn-danger btn-sm' style='color: white' data-trigger='hover' data-container='body' data-toggle='popover' data-content='Click this to toggle between showing previews on the right of the table, or in a separate popup.'><i class='fa fa-columns'></i></a>-->",
+                    "search": "Search: _INPUT_ <a style='margin-top: -5px;' class='btn btn-outline-primary btn-sm' href='#' data-toggle='modal' data-target='#helpModal'><i class='fa fa-question'></i></a><!--<a role='button' style='margin-top: -5px;' id='togglePreviewWindow' onClick='togglePreviewPane()' class='btn btn-danger btn-sm' style='color: white' data-trigger='hover' data-container='body' data-toggle='popover' data-content='Click this to toggle between showing previews on the right of the table, or in a separate popup.'><i class='fa fa-columns'></i></a>-->",
                     "info": "Showing _START_ to _END_ of _TOTAL_ files",
                 },
                 "displayStart": page * 25,
