--- a/wwwroot/files/index.html
+++ b/wwwroot/files/index.html
@@ -492,7 +492,7 @@
                                     }
                                 }
                                 var db2name = filename.replace("dbfilesclient/", "").replace(".db2", "");
-                                var test = "<a href='//wow.tools/dbc/?dbc=" + db2name + "' target='_BLANK'><i class='fa fa-table'></i></a>";
+                                var test = "<a href='/dbc/?dbc=" + db2name + "' target='_BLANK'><i class='fa fa-table'></i></a>";
                             } else {
                                 //if (full[3].length && full[3][0].enc != 1) {
                                 //if ($("#files_preview").is(":visible")) {
