Add experimental DB2 diffing

--- a/wwwroot/builds/diff.html
+++ b/wwwroot/builds/diff.html
@@ -36,6 +36,7 @@
     <script type="text/javascript" src="/js/anims.js?v=1658923290"></script>
     <script type="text/javascript" src="/js/bufo.js"></script>
     <script type="text/javascript" src="/js/js-blp.js"></script>
+
 </head>
 <body>
     <nav class="navbar navbar-expand-lg">
@@ -54,7 +55,13 @@
                     <a class="nav-link" href="/files/"><i class="fa fa-files-o" aria-hidden="true"></i> Files</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link" href="/dbc/"><i class="fa fa-table"></i> Tables</a>
+                    <a class="nav-link dropdown-toggle" href="#" id="navDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <i class="fa fa-table" aria-hidden="true"></i> Tables
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navDropdown">
+                        <a class="dropdown-item" href="/dbc/">Browse</a>
+                        <a class="dropdown-item" href="/dbc/diff.html">Compare</a>
+                    </div>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/mv/"><i class="fa fa-cube" aria-hidden="true"></i> Models</a>
@@ -190,13 +197,13 @@
                                 break;
                             case "modified":
                                 switch (full.type) {
-                                    //case "db2":
-                                    //    if (full.filename && full.filename != "Unknown") {
-                                    //        var db2name = full.filename.replace("dbfilesclient/", "").replace(".db2", "");
-                                    //        content = "<a style='cursor: pointer' data-toggle='modal' data-target='#previewModal' onClick='fillDBCDiffModal(\"<?=$fromBuildName ?>\", \"<?= $toBuildName ?>\", \"" + db2name + "\")'>Preview</a>";
+                                    case "db2":
+                                        if (full.filename && full.filename != "Unknown") {
+                                            var db2name = full.filename.replace("dbfilesclient/", "").replace(".db2", "");
+                                            content = "<a style='cursor: pointer' data-toggle='modal' data-target='#previewModal' onClick='fillDBCDiffModal(\"" + from + "\", \"" + to + "\", \"" + db2name + "\")'>Preview</a>";
 
-                                    //    }
-                                    //    break;
+                                        }
+                                        break;
                                     //case "blp":
                                     //case "htm":
                                     //case "html":
