--- a/wwwroot/files/index.html
+++ b/wwwroot/files/index.html
@@ -55,7 +55,13 @@
                     <a class="nav-link" href="/files/"><i class="fa fa-files-o" aria-hidden="true"></i> Files</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link" href="/dbc/"><i class="fa fa-table"></i> Tables</a>
+                    <a class="nav-link dropdown-toggle" href="#" id="navDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <i class="fa fa-table" aria-hidden="true"></i> Tables
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navDropdown">
+                        <a class="dropdown-item" href="/dbc/">Browse</a>
+                        <a class="dropdown-item" href="/dbc/diff.html">Compare</a>
+                    </div>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/mv/"><i class="fa fa-cube" aria-hidden="true"></i> Models</a>
